--- a/webproject/package.json
+++ b/webproject/package.json
@@ -15,6 +15,8 @@
     "express-session": "^1.17.1",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.10.11",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
