--- a/webproject/package.json
+++ b/webproject/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-router-dom": "^5.2.0",
